Implemented Artio FIX engine for Benchmark and OffHeap engine instances